// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Balance > should render 1`] = `
<div>
  <div
    class="bg-theme-secondary-100 flex flex-row items-center justify-center space-x-2 px-8 py-2.5 md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right dark:bg-black md:dark:bg-transparent"
  >
    <div
      class="text-theme-secondary-700 md:text-theme-secondary-500 dark:text-theme-secondary-500 whitespace-nowrap md:text-xs md:font-semibold"
    >
      Your Balance
    </div>
    <div
      class="text-theme-secondary-900 md:text-theme-secondary-text md:dark:text-theme-text dark:text-theme-secondary-200 font-semibold"
      data-testid="Balance__value"
    >
      <span
        class="whitespace-nowrap"
        data-testid="Amount"
      >
        0 BTC
      </span>
    </div>
  </div>
</div>
`;

exports[`Balance > should render loading state 1`] = `
<div>
  <div
    class="bg-theme-secondary-100 -mt-3 flex flex-row items-center justify-center space-x-2 px-8 py-2.5 md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right dark:bg-black md:dark:bg-transparent"
  >
    <div
      class="text-theme-secondary-700 md:text-theme-secondary-500 dark:text-theme-secondary-500 whitespace-nowrap md:text-xs md:font-semibold"
    >
      Your Balance
    </div>
    <div
      class="py-1"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 60px; height: 16px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</div>
`;
